--- a/11thLauncherUpdater/11thLauncherUpdater.csproj
+++ b/11thLauncherUpdater/11thLauncherUpdater.csproj
@@ -101,6 +101,10 @@
     <Resource Include="icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>echo Copying updater to launcher lib folder
+xcopy "$(TargetPath)" "$(SolutionDir)11thLauncher\lib\" /Y /I</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
