--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,7 @@
 version: 1.0.{build}
 image: Visual Studio 2017
 before_build:
+- choco install ant
 - cmd: nuget restore
 build:
   verbosity: minimal
