--- a/11thLauncher/11thLauncher.csproj
+++ b/11thLauncher/11thLauncher.csproj
@@ -122,7 +122,9 @@
     <Compile Include="Messages\LoadProfileMessage.cs" />
     <Compile Include="Messages\SaveProfileMessage.cs" />
     <Compile Include="Models\ConfigFile.cs" />
+    <Compile Include="Models\Parameter\NumericalParameter.cs" />
     <Compile Include="Models\Parameter\SelectionParameter.cs" />
+    <Compile Include="Models\Parameter\ValueItem.cs" />
     <Compile Include="Models\Profile\ProfileFile.cs" />
     <Compile Include="Messages\AddonsLoadedMessage.cs" />
     <Compile Include="Messages\FillServerInfoMessage.cs" />
@@ -193,7 +195,6 @@
       <DependentUpon>SettingsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Util\ParameterTemplateSelector.cs" />
-    <Compile Include="Models\Parameter\ParameterValueItem.cs" />
     <Compile Include="Models\Profile\UserProfile.cs" />
     <Compile Include="Services\ProfileService.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
