--- a/11thLauncher.Updater/11thLauncher.Updater.csproj
+++ b/11thLauncher.Updater/11thLauncher.Updater.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{50C8B672-8A4F-486A-B9CB-07C969142D00}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_11thLauncherUpdater</RootNamespace>
-    <AssemblyName>11thLauncherUpdater</AssemblyName>
+    <RootNamespace>_11thLauncher.Updater</RootNamespace>
+    <AssemblyName>11thLauncher.Updater</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
