--- a/11thLauncher/11thLauncher.csproj
+++ b/11thLauncher/11thLauncher.csproj
@@ -118,9 +118,11 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Accessors\Contracts\IFileAccessor.cs" />
+    <Compile Include="Accessors\Contracts\ILogger.cs" />
     <Compile Include="Accessors\Contracts\INetworkAccessor.cs" />
     <Compile Include="Accessors\Contracts\IRegistryAccessor.cs" />
     <Compile Include="Accessors\FileAccessor.cs" />
+    <Compile Include="Accessors\Logger.cs" />
     <Compile Include="Accessors\NetworkAccessor.cs" />
     <Compile Include="Accessors\RegistryAccessor.cs" />
     <Compile Include="Messages\ProfileAddedMessage.cs" />
