Changed server version check to be done on server query

--- a/11thLauncher/11thLauncher.csproj
+++ b/11thLauncher/11thLauncher.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Messages\ProfileDeletedMessage.cs" />
     <Compile Include="Messages\LoadProfileMessage.cs" />
     <Compile Include="Messages\SaveProfileMessage.cs" />
+    <Compile Include="Messages\ServerQueryFinished.cs" />
     <Compile Include="Models\ConfigFile.cs" />
     <Compile Include="Models\Parameter\BooleanParameter.cs" />
     <Compile Include="Models\Parameter\NumericalParameter.cs" />
