--- a/11thLauncher/11thLauncher.csproj
+++ b/11thLauncher/11thLauncher.csproj
@@ -115,7 +115,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Accessors\ClipboardAccessor.cs" />
+    <Compile Include="Accessors\Contracts\IClipboardAccessor.cs" />
     <Compile Include="Accessors\Contracts\IFileAccessor.cs" />
+    <Compile Include="Accessors\Contracts\IProcessAccessor.cs" />
+    <Compile Include="Accessors\ProcessAccessor.cs" />
     <Compile Include="Util\ILogger.cs" />
     <Compile Include="Accessors\Contracts\INetworkAccessor.cs" />
     <Compile Include="Accessors\Contracts\IRegistryAccessor.cs" />
