--- a/11thLauncher/11thLauncher.csproj
+++ b/11thLauncher/11thLauncher.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Accessors\Contracts\IFileAccessor.cs" />
     <Compile Include="Accessors\Contracts\IProcessAccessor.cs" />
     <Compile Include="Accessors\ProcessAccessor.cs" />
+    <Compile Include="Messages\ApplicationClosingMessage.cs" />
     <Compile Include="Util\ILogger.cs" />
     <Compile Include="Accessors\Contracts\INetworkAccessor.cs" />
     <Compile Include="Accessors\Contracts\IRegistryAccessor.cs" />
@@ -354,6 +355,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\uacDisabled.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\steam.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\steamDisabled.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
