--- a/11thLauncher/11thLauncher.csproj
+++ b/11thLauncher/11thLauncher.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Accessors\Contracts\IProcessAccessor.cs" />
     <Compile Include="Accessors\ProcessAccessor.cs" />
     <Compile Include="Services\AbstractService.cs" />
+    <Compile Include="Services\LegacySettingsService.cs" />
     <Compile Include="Util\ILogger.cs" />
     <Compile Include="Accessors\Contracts\INetworkAccessor.cs" />
     <Compile Include="Accessors\Contracts\IRegistryAccessor.cs" />
